deploy/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: site
  name: site
spec:
  replicas: 1
  selector:
    matchLabels:
      app: site
  template:
    metadata:
      labels:
        app: site
    spec:
      containers:
        - image: gcr.io/bootiful/joshlong-com-site@sha256:e787fae59a046e37a4cbb4920e4f43f838eb1b1f7fd2263b38d9a33368c4fef7
          imagePullPolicy: Always
          name: site
