deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: joshlong-site
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: joshlong-site
  type: LoadBalancer
